# rust_format

./: .gitignore  Cargo.toml  Makefile  README.md
src/: c.rs  html.rs  java.rs  js.rs  json.rs  lib.rs  shell.rs  template.rs  vim.rs  xml.rs
tests/: test_c.rs  test_html.rs  test_java.rs  test_js.rs  test_json.rs  test_shell.rs  test_vim.rs  test_xml.rs
uml/: rust_format.mdj
