# **************************************************
# *  Author: Iceyee                                *
# *  Mail: iceyee.studio@qq.com                    *
# *  Git: https://github.com/iceyee                *
# **************************************************
#                                                   
[package]
name = "rust_format"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
